refactoring records